second section added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,25 @@
                <p> Happy New Year</p>
           <h1>New Year Party <br> Celebration</h1>
           </div>
-          
      </header>
 
 
-     <main></main>
+     <main>
+<!-- 65% offer starts here -->
+ <section class="offer-container">
+
+     <div class="offer-content">
+          <h1>65% OFF</h1>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h3>ALL CATEGORIES</h3>
+     </div>
+     <div class="offer-image"><img src="images/New Year Photo.png" alt=""></div>
+ </section>
+<!-- 65% offer ends here -->
+
+
+
+     </main>
      <footer></footer>
 
 </body>
